# gh-ai-pull-request

./: README.md  gh-AI-Pull-Request  gh-ai-pull-request  pyproject.toml
config/: config.json
src/: __main__.py  cli.py  main.py
src/common/: GhDryRunParser.py  __init__.py
src/config/: ConfigManager.py  __init__.py  config.py  config_manager.py
src/gemini/: PrPrompt.py  PromptManager.py  pr_prompt.py  prompt_manager.py
src/gh/: GhManager.py  PullRequest.py  gh_dry_run_parser.py  gh_manager.py
